syntax = "proto3";

package rent.user.v1;
option go_package = "github.com/bradleyshawkins/rent/user";

service RentUserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

enum Status {
  STATUS_UNSPECIFIED = 0;
  STATUS_ACTIVE = 1;
  STATUS_DISABLED = 2;
}

message CreateUserRequest {
  string email_address = 1;
  string first_name = 2;
  string last_name = 3;
  string username = 4;
  string password = 5;
}

message CreateUserResponse {
  string user_id = 1;
}

message UpdateUserRequest {
  string email_address = 1;
  string first_name = 2;
  string last_name = 3;
}

message UpdateUserResponse {

}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  string user_id = 1;
  string email_address = 2;
  string first_name = 3;
  string last_name = 4;
}

message DeleteUserRequest {
  string user_id = 1;
}

message DeleteUserResponse {

}